classDiagram
    %% 1. Interfaces
    class Stockable {
        <<interface>>
        +addStock(qty: int) void
        +reduceStock(qty: int) void
        +getStock() int
    }

    class Reviewable {
        <<interface>>
        +addReview(r: Review) void
        +getAverageRating() double
        +getAllReviews() List~Review~
    }

    class Payable {
        <<interface>>
        +pay(amount: double) void
        +getPaymentStatus() String
    }

    class Observer {
        <<interface>>
        +update(statusMessage: String) void
    }

    class Subject {
        <<interface>>
        +registerObserver(o: Observer) void
        +removeObserver(o: Observer) void
        +notifyObservers(statusMessage: String) void
    }

    %% 2. Abstract Classes
    class User {
        <<abstract>>
        #userId: String
        #name: String
        #email: String
        #password: String
        #address: String
        #profilePhoto: String
        #addresses: List~String~
        #cart: Cart
        #orderHistory: List~Transaction~
        +User(...)
        +addToCart(p: Product) void
        +removeFromCart(id: String) void
        +checkout() Transaction
        +checkout(...) Transaction
        +login() boolean
        +logout() void
        +updateProfile() void
        +getRole() String*
    }

    class Product {
        <<abstract>>
        #productId: String
        #name: String
        #description: String
        #price: double
        #stock: int
        #imageUrl: String
        #seller: Seller
        #reviewList: List~Review~
        +Product(...)
        +getCategory() String*
        +addStock(qty: int) void
        +reduceStock(qty: int) void
        +getStock() int
        +addReview(r: Review) void
        +getAverageRating() double
        +getAllReviews() List~Review~
    }

    %% 3. Concrete Classes (User & Product Inheritances)
    class Buyer {
        +Buyer(...)
        +writeReview(r: Review) void
        +viewDashboard() void
        +getRole() String
    }

    class Seller {
        -shopName: String
        -productList: List~Product~
        -totalRevenue: double
        -shopCategory: String
        +Seller(...)
        +addProduct(p: Product) void
        +removeProduct(id: String) void
        +updateProduct(p: Product) void
        +respondToReview(r: Review) void
        +viewDashboard() void
        +getRole() String
        +addRevenue(amount: double) void
    }

    class Admin {
        -adminLevel: int
        +Admin(...)
        +blockUser(u: User) void
        +deleteProduct(id: String) void
        +manageProducts() void
        +getRole() String
    }

    class ElectronicProduct {
        -brand: String
        -warrantyMonths: int
        +ElectronicProduct(...)
        +getCategory() String
        +getWarrantyInfo() String
    }

    class FashionProduct {
        -size: String
        -material: String
        -color: String
        +FashionProduct(...)
        +getCategory() String
        +getAvailableSizes() List~String~
    }

    class FoodProduct {
        -expiryDate: Date
        -weightGram: double
        +FoodProduct(...)
        +getCategory() String
        +isExpired() boolean
    }

    %% 4. Associated Classes (Entities)
    class Cart {
        -cartId: String
        -buyer: User
        -itemList: List~OrderItem~
        +Cart(...)
        +addItem(item: OrderItem) void
        +removeItem(productId: String) void
        +calculateTotal() double
        +clearCart() void
    }

    class OrderItem {
        -id: Long
        -product: Product
        -quantity: int
        +OrderItem(product: Product, quantity: int)
        +calculateSubtotal() double
    }

    class Transaction {
        #transactionId: String
        #buyer: User
        #itemList: List~OrderItem~
        #status: TransactionStatus
        #totalAmount: double
        #createdAt: Date
        -paymentStatus: String
        #shippingAddress: String
        #courier: String
        #shippingCost: double
        #discount: double
        #paymentMethod: String
        -observers: List~Observer~
        +Transaction(...)
        +registerObserver(o: Observer) void
        +removeObserver(o: Observer) void
        +notifyObservers(statusMessage: String) void
        +pay(amount: double) void
        +getPaymentStatus() String
        +updateStatus(s: TransactionStatus) void
    }

    class Review {
        -reviewId: String
        -buyer: User
        -product: Product
        -rating: int
        -comment: String
        -reply: String
        -createdAt: Date
        -transactionId: String
        +Review(...)
        +getRating() int
        +setReply(message: String) void
    }

    class Notification {
        -notificationId: String
        -recipient: User
        -message: String
        -isRead: boolean
        -createdAt: Date
        +Notification(...)
        +send() void
        +markAsRead() void
    }

    class ProductManager {
        -daftarProduk: ArrayList~Product~
        +ProductManager()
        +tambahProduk(produkBaru: Product) void
        +lihatSemuaProduk() void
        +updateHargaProduk(idTarget: String, hargaBaru: double) void
        +hapusProduk(idTarget: String) void
        +filterBerdasarkanKategori(kategoriTarget: String) void
    }

    class Dashboard {
        -user: User
        -notificationList: List~Notification~
        +Dashboard(...)
        +getSummary() Map~String, Object~
        +getNotifications() List~Notification~
        +refresh() void
        +update(statusMessage: String) void
    }

    class TransactionStatus {
        <<enumeration>>
        PENDING
        PROCESSING
        SHIPPED
        DELIVERED
        CANCELLED
    }

    %% 5. Relationships
    User <|-- Buyer : Inheritance
    User <|-- Seller : Inheritance
    User <|-- Admin : Inheritance
    
    Product <|-- ElectronicProduct : Inheritance
    Product <|-- FashionProduct : Inheritance
    Product <|-- FoodProduct : Inheritance

    Reviewable <|.. Product : Realization
    Stockable <|.. Product : Realization
    Payable <|.. Transaction : Realization
    Subject <|.. Transaction : Realization
    Observer <|.. Dashboard : Realization

    User "1" *-- "1" Cart : Composition
    Cart "1" o-- "*" OrderItem : Aggregation
    OrderItem "*" --> "1" Product : Association
    
    User "1" --> "*" Transaction : Association
    Transaction "1" *-- "*" OrderItem : Composition
    
    Product "1" *-- "*" Review : Composition
    Review "*" --> "1" User : Association
    
    User "1" --> "*" Notification : Association
    ProductManager "*" o-- "*" Product : Aggregation
    Transaction "1" --> "1" TransactionStatus : Association
    Dashboard "1" --> "1" User : Association
    Dashboard "1" o-- "*" Notification : Aggregation
    Transaction "*" o-- "*" Observer : Aggregation


